# document-assistant-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  demo_question.webm  demo_upload.webm  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/logic/: document_loader.py  logging_config.py  models.py  rag_chain.py  vector_store.py
frontend/: .lintstagedrc.js  .prettierrc  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/app/: page.tsx
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.stories.tsx  ChatInterface.tsx  FileList.stories.tsx  FileList.tsx  FileUploader.stories.tsx  FileUploader.tsx  ModeToggler.tsx
frontend/src/components/ui/: badge.stories.tsx  badge.tsx  button.stories.tsx  button.tsx  card.stories.tsx  card.tsx  separator.stories.tsx  separator.tsx  sonner.stories.tsx  sonner.tsx  textarea.stories.tsx  textarea.tsx
frontend/src/lib/: logger.ts
