[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for RAG Document Assistant"
authors = ["Oyoshi <rafal.apriasz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
langchain = "^1.1.0"
langchain-text-splitters = "^1.0.0"
langchain-openai = "^1.1.0"
langchain-community = "^0.4.1"
qdrant-client = "^1.16.1"
pypdf = "^6.4.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.5.0,<5.0.0"
black = ">=25.11.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.18.2,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
